feat(task): 运行服务

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,5 +16,5 @@
 - name: 配置环境变量
   template: src=env.j2 dest={{ OPT_PATH }}/es/.env
 
-# - name: 运行服务
-  # shell: 'docker-compose -f {{ OPT_PATH }}/es/docker-compose.yaml up -d'
+- name: 运行服务
+  shell: 'docker-compose -f {{ OPT_PATH }}/es/docker-compose.yaml up -d'
