--- a/files/docker-compose.yaml
+++ b/files/docker-compose.yaml
@@ -90,7 +90,7 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+      - ES_JAVA_OPTS=${ES_JAVA_OPTS}
     ulimits:
       memlock:
         soft: -1
@@ -129,7 +129,7 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+      - ES_JAVA_OPTS=${ES_JAVA_OPTS}
     ulimits:
       memlock:
         soft: -1
@@ -168,7 +168,7 @@ services:
       - xpack.security.transport.ssl.certificate_authorities=certs/ca/ca.crt
       - xpack.security.transport.ssl.verification_mode=certificate
       - xpack.license.self_generated.type=${LICENSE}
-    mem_limit: ${MEM_LIMIT}
+      - ES_JAVA_OPTS=${ES_JAVA_OPTS}
     ulimits:
       memlock:
         soft: -1
@@ -203,7 +203,6 @@ services:
       - ELASTICSEARCH_USERNAME=kibana_system
       - ELASTICSEARCH_PASSWORD=${KIBANA_PASSWORD}
       - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=config/certs/ca/ca.crt
-    mem_limit: ${MEM_LIMIT}
     healthcheck:
       test:
         [
